--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <title>noretteingabire.me</title>
   </head>
   <body>
-    Welcome to my world
+    Welcome to my world!!
+
+    Take a look at my projects!
   </body>
 </html>
