--- a/index.html
+++ b/index.html
@@ -4,8 +4,6 @@
     <title>noretteingabire.me</title>
   </head>
   <body>
-    Welcome to my world!!
-
-    Take a look at my projects!
+    Welcome to my world!! Take a look at my projects!
   </body>
 </html>
