--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <title>noretteingabire.me</title>
   </head>
   <body>
-    Welcome to my world!! Take a look at my projects!
+    Welcome to my world Take a look at my projects!
+  </body>
+  <body>
+    I love dancing
   </body>
 </html>
