--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
   <head>
     <title>noretteingabire.me</title>
   </head>
+  <p>
+    Get to know me a little bit
+  </p>
   <body>
     Welcome to my world Take a look at my projects!
   </body>
