--- a/index.html
+++ b/index.html
@@ -3,13 +3,11 @@
   <head>
     <title>noretteingabire.me</title>
   </head>
-  <p>
-    Get to know me a little bit
-  </p>
   <body>
     Welcome to my world Take a look at my projects!
   </body>
-  <body>
-    I love dancing
-  </body>
+
+  <a href="  https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+
+
 </html>
