--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
     <title>noretteingabire.me</title>
   </head>
   <body>
-    Welcome to my world Take a look at my projects!
+    <h1>Welcome to my world Take a look at my projects!</h1>
+    <a href="  https://sites.dartmouth.edu/soyeya/">Soyeya</a>
   </body>
 
-  <a href="  https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+
 
 
 </html>
