--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>noretteingabire.me</title>
+    <title>Norette Ingabire</title>
   </head>
   <body>
-    <h1>Welcome to my world Take a look at my projects!</h1>
+    <h1>Welcome to my world!</h1>
+    <p>Just laughing my way through life...</p>
     <a href="  https://sites.dartmouth.edu/soyeya/">Soyeya</a>
   </body>
 
