--- a/index.html
+++ b/index.html
@@ -1,17 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <link rel="stylesheet" href="main.css">
-    <meta charset="utf-8">
-    <title>Norette Ingabire</title>
+    <title>noretteingabire.me</title>
   </head>
   <body>
-    <h1>Welcome to my world!</h1>
-    <p>Just laughing my way through life...</p>
-    <a href="  https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+    Welcome to my world
   </body>
-
-
-
-
 </html>
