--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <body>
-    Welcome to my world
+    <h1>Welcome to my world</h1>
+    <p>Just laughing my way through life...</p>
   </body>
 </html>
