--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
   <body>
     <h1>Welcome to my world</h1>
     <p>Just laughing my way through life...</p>
+    <h2>Lost in discovery</h2>
   </body>
 </html>
