--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <h1>Welcome to my world</h1>
     <p>Just laughing my way through life...</p>
+    <p>Take a look at my projects</p>
     <h2>Lost in discovery</h2>
   </body>
 </html>
