--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <title>Norette Ingabire</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
-  <body>
-    <h1>Welcome to my world</h1>
+  <!--<body> -->
+  <header>
+    <h1><strong>Norette Ingabire<strong></h1>
+    </header>
+
+  <section>
+    <h2>About Me</h2>
+    <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+  </section>
+
+  <footer>
+    <small>&copy; Norette Ingabire</small>
+  </footer>
+
+<!--    <h1><strong>Welcome to my world</strong></h1>
     <p>Just laughing my way through life...</p>
-    <p>Take a look at my projects</p>
-    <h2>Lost in discovery</h2>
-  </body>
+    <p><em>Take a look at my projects</em></p>
+    <h2>Lost in discovery</h2> -->
+
+<!--  </body>-->
 </html>
