--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
   </section>
 
+  <section>
+    <h1>Take a look at my projects!</h1>
+    <a href="https://sites.dartmouth.edu/soyeya/">Google</a>
+
+
   <footer>
+    <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
     <small>&copy; Norette Ingabire</small>
   </footer>
 
