--- a/index.html
+++ b/index.html
@@ -6,21 +6,21 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header>
+  <header class="container">
     <h1><strong>Norette Ingabire<strong></h1>
     </header>
 
-  <section>
-    <h2>About Me</h2>
+  <section class = "hero container">
+    <h2 class="btn btn-alt">About Me</h2>
     <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
   </section>
 
-  <section>
+  <section class="container">
     <h1>Take a look at my projects!</h1>
     <a href="https://sites.dartmouth.edu/soyeya/">Google</a>
 
 
-  <footer>
+  <footer class="container">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
     <small>&copy; Norette Ingabire</small>
   </footer>
