--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <section class="container">
     <h1>Take a look at my projects!</h1>
-    <a href="https://sites.dartmouth.edu/soyeya/">Google</a>
+    <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
 
 
   <footer class="container">
