--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header class="container">
-    <h1><strong>Norette Ingabire<strong></h1>
+  <header class="container group">
+    <h1 class="logo">
+    <a href="index.html"<strong>Norette Ingabire<strong></a>
+    </h1>
     </header>
 
   <section class = "hero container">
@@ -20,7 +22,7 @@
     <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
 
 
-  <footer class="container">
+  <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
     <small>&copy; Norette Ingabire</small>
   </footer>
