--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <!--<body> -->
   <header class="container group">
     <h1 class="logo">
-    <a href="index.html"<strong>Norette Ingabire<strong></a>
+    <strong>Norette Ingabire<strong>
     </h1>
     </header>
 
   <section class = "hero container">
-    <h2 class="btn btn-alt">About Me</h2>
+    <h2>About Me</h2>
     <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
   </section>
 
