--- a/index.html
+++ b/index.html
@@ -12,15 +12,20 @@
     </h1>
     </header>
 
-  <section class = "hero container">
-    <h2>About Me</h2>
-    <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+<section class="grid">
+
+<!-- Introduction -->
+
+    <section class = "col-1-3">
+      <h2>About Me</h2>
+      <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+    </section><!--
+      Projects
+    --> <section class="col-1-3">
+      <h1>Take a look at my projects!</h1>
+      <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+    </section>
   </section>
-
-  <section class="container">
-    <h1>Take a look at my projects!</h1>
-    <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
-
 
   <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
