--- a/index.html
+++ b/index.html
@@ -6,22 +6,26 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header class="container group">
+  <header class="hero container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
     </header>
+    <h3 class="tagline">Developer.&ndash;Dancer. &mdash;Enthusiast</h3>
+
+    <nav class="primary-nav">
+    </nav>
 
 <section class="grid">
 
 <!-- Introduction -->
 
-    <section class = "col-1-3">
+    <section class = "teaser col-1-3">
       <h2>About Me</h2>
       <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
     </section><!--
       Projects
-    --> <section class="col-1-3">
+    --> <section class="teaser col-1-3">
       <h1>Take a look at my projects!</h1>
       <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
     </section>
