--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <strong>Norette Ingabire<strong>
     </h1>
     </header>
-    <h3 class="tagline">Developer.&ndash;Dancer. &mdash;Enthusiast</h3>
+    <h3 class="tagline">Developer.Dancer.Enthusiast</h3>
 
     <nav class="primary-nav">
     </nav>
