--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header class="hero container group">
+  <header class="container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
