--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header class="hero container group">
+  <header class="container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
-    </header>
-    <h3 class="tagline">Developer.Dancer.Enthusiast</h3>
-
-    <nav class="primary-nav">
+    <h3 class="tagline">Developer.Dancer.Enthusiast
+    </h3>
+    <nav class="nav primary-nav">
     </nav>
+    </header>
+
+
 
 <section class="grid">
 
@@ -33,7 +35,9 @@
 
   <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
-    <small>&copy; Norette Ingabire</small>
+    <!-- <small>&copy; Norette Ingabire</small> -->
+    <nav class="nav">
+    </nav>
   </footer>
 
 <!--    <h1><strong>Welcome to my world</strong></h1>
