--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="assets/stylesheets/main.css">
   </head>
   <!--<body> -->
-  <header class="container group">
+  <header class="hero container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
@@ -22,7 +22,7 @@
 
 <!-- Introduction -->
 
-    <section class = "hero teaser col-1-3">
+    <section class = "teaser col-1-3">
       <h2>About Me</h2>
       <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
     </section><!--
