--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <title>Norette Ingabire</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet"
+    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
   <!--<body> -->
-  <header class="hero container group">
+  <header class="container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
