--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
   <!--<body> -->
-  <header class="container group">
+  <header class="hero container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
@@ -30,7 +30,7 @@
     </section><!--
       Projects
     --> <section class="teaser col-1-3">
-      <h1>Take a look at my projects!</h1>
+      <h1>Projects</h1>
       <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
     </section>
   </section>
