--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
   <!--<body> -->
-  <header class="hero container group">
+  <header class="primary-header container group">
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
@@ -20,20 +20,24 @@
 
 
 
-<section class="grid">
+<section class="row">
+  <div class="grid">
 
-<!-- Introduction -->
+    <!-- Introduction -->
 
-    <section class = "teaser col-1-3">
-      <h2>About Me</h2>
-      <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
-    </section><!--
-      Projects
-    --> <section class="teaser col-1-3">
-      <h1>Projects</h1>
-      <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
-    </section>
-  </section>
+      <section class = "teaser col-1-3">
+        <h2>About Me</h2>
+        <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+      </section><!--
+
+        Projects
+
+      --> <section class="teaser col-1-3">
+        <h1>Projects</h1>
+        <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+      </section>
+  </div>
+</section>
 
   <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
