--- a/index.html
+++ b/index.html
@@ -25,16 +25,25 @@
 
     <!-- Introduction -->
 
-      <section class = "teaser col-1-3">
-        <h2>About Me</h2>
-        <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+      <section class="row-alt">
+        <div class="container">
+        <section class = "teaser col-1-3">
+          <h2>About Me</h2>
+          <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+        </div>
+      </section>
       </section><!--
 
         Projects
 
-      --> <section class="teaser col-1-3">
+      --> <section class="row-alt">
+         <div class="container">
+      <section class="teaser col-1-3">
         <h1>Projects</h1>
+        <p>Take a look at some of my projects below!</p>
         <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
+      </div>
+    </section>
       </section>
   </div>
 </section>
