--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Introduction -->
 
       <section class="row-alt">
-        <div class="lead container">
+        <div class="container">
         <section class = "teaser col-1-3">
           <h2>About Me</h2>
           <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
