--- a/index.html
+++ b/index.html
@@ -12,9 +12,16 @@
     <h1 class="logo">
     <strong>Norette Ingabire<strong>
     </h1>
-    <h3 class="tagline">Developer.Dancer.Enthusiast
-    </h3>
+  <!--  <h3 class="tagline">Developer.Dancer.Enthusiast
+  </h3> -->
+
     <nav class="nav primary-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="about.html">About</a></li><!--
+        --><li><a href="projects.html">Projects</a></li><!--
+        --><li><a href="contact.html">Contact</a></li>
+        </ul
     </nav>
     </header>
 
@@ -51,7 +58,13 @@
   <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
     <!-- <small>&copy; Norette Ingabire</small> -->
-    <nav class="nav">
+    <nav class="nav primary-nav">
+      <ul>
+        <li><a href="index.html">Home</a></li><!--
+        --><li><a href="about.html">About</a></li><!--
+        --><li><a href="projects.html">Projects</a></li><!--
+        --><li><a href="contact.html">Contact</a></li>
+        </ul
     </nav>
   </footer>
 
