--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         --><li><a href="about.html">About</a></li><!--
         --><li><a href="projects.html">Projects</a></li><!--
         --><li><a href="contact.html">Contact</a></li>
-        </ul
+        </
     </nav>
     </header>
 
@@ -34,7 +34,7 @@
 
       <section class="row-alt">
         <div class="container">
-        <section class = "teaser col-1-3">
+        <section class = "teaser col-2-3">
           <h2>About Me</h2>
           <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
         </div>
@@ -58,13 +58,7 @@
   <footer class="primary-footer container group">
     <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
     <!-- <small>&copy; Norette Ingabire</small> -->
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li><!--
-        --><li><a href="about.html">About</a></li><!--
-        --><li><a href="projects.html">Projects</a></li><!--
-        --><li><a href="contact.html">Contact</a></li>
-        </ul
+    <nav class="nav">
     </nav>
   </footer>
 
