--- a/index.html
+++ b/index.html
@@ -1,71 +1,19 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Norette Ingabire</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet"
-    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
-  </head>
-  <!--<body> -->
-  <header class="primary-header container group">
-    <h1 class="logo">
-    <strong>Norette Ingabire<strong>
-    </h1>
-  <!--  <h3 class="tagline">Developer.Dancer.Enthusiast
-  </h3> -->
+<head>
+  <title>Norette Ingabire</title>
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
+</head>
 
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li><!--
-        --><li><a href="about.html">About</a></li><!--
-        --><li><a href="projects.html">Projects</a></li><!--
-        --><li><a href="contact.html">Contact</a></li>
-        </
-    </nav>
-    </header>
+<body>
+  <header>
+    <div class="row">
+      <ul class="main-nav">
+        <li><a href="">About</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="">Contact</a></li>
+    </div>
 
+  </header>
+</body>
 
-
-<section class="row">
-  <div class="grid">
-
-    <!-- Introduction -->
-
-      <section class="row-alt">
-        <div class="container">
-        <section class = "teaser col-2-3">
-          <h2>About Me</h2>
-          <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
-        </div>
-      </section>
-      </section><!--
-
-        Projects
-
-      --> <section class="row-alt">
-         <div class=" lead container">
-      <section class="teaser col-1-3">
-        <h1>Projects</h1>
-        <p>Take a look at some of my projects below!</p>
-        <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
-      </div>
-    </section>
-      </section>
-  </div>
-</section>
-
-  <footer class="primary-footer container group">
-    <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
-    <!-- <small>&copy; Norette Ingabire</small> -->
-    <nav class="nav">
-    </nav>
-  </footer>
-
-<!--    <h1><strong>Welcome to my world</strong></h1>
-    <p>Just laughing my way through life...</p>
-    <p><em>Take a look at my projects</em></p>
-    <h2>Lost in discovery</h2> -->
-
-<!--  </body>-->
 </html>
