--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <title>Norette Ingabire</title>
-  <link rel="stylesheet" href="assets/stylesheets/main.css">
+  <link rel="stylesheet" href="assets/stylesheets/main.css" type="text/css">
 
 </head>
 <body>
