--- a/index.html
+++ b/index.html
@@ -3,14 +3,19 @@
   <title>Norette Ingabire</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css" type="text/css">
 
+
 </head>
 <body>
   <header>
     <div class="row">
+      <div class="logo">
+        <img src="webimage.jpg"
       <ul class="main-nav">
-        <li><a href=""> About </a></li>
+        <li class="active"><a href=""> About </a></li>
         <li><a href=""> Projects </a></li>
         <li><a href=""> Contact </a></li>
+
+      </ul>
     </div>
 
   </header>
