--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="row">
       <div class="logo">
-        <img src="webimage.jpg">
+        <img src="webimage.png">
       <ul class="main-nav">
         <li class="active"><a href=""> About </a></li>
         <li><a href=""> Projects </a></li>
