--- a/index.html
+++ b/index.html
@@ -10,12 +10,17 @@
     <div class="row">
       <div class="logo">
         <img src="webimage.png">
+      </div>
       <ul class="main-nav">
         <li class="active"><a href=""> About </a></li>
         <li><a href=""> Projects </a></li>
         <li><a href=""> Contact </a></li>
 
       </ul>
+    </div>
+
+    <div class="hero">
+      <h1>Welcome to my world!</h1>
     </div>
 
   </header>
