--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <div class="row">
       <div class="logo">
-        <img src="webimage.png">
+        <h1>Norette Ingabire</h1>
       </div>
       <ul class="main-nav">
         <li class="active"><a href=""> About </a></li>
