--- a/index.html
+++ b/index.html
@@ -1,29 +1,12 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
   <title>Norette Ingabire</title>
-  <link rel="stylesheet" href="assets/stylesheets/main.css" type="text/css">
+  <link rel="stylesheet" href="assets/stylesheets/main.css">
 </head>
 
-<body>
-  <header>
-    <div class="row">
-      <div class="logo">
-        <h1>Norette Ingabire</h1>
-      </div>
-      <!--
-      <ul class="main-nav">
-        <li class="active"><a href=""> About </a></li>
-        <li><a href=""> Projects </a></li>
-        <li><a href=""> Contact </a></li>
-      </ul>
-      -->
-    </div>
-
-    <div class="hero">
-      <h1>Welcome to my world!</h1>
-    </div>
-
-  </header>
-</body>
-
+<header class="primary-header">
+  <h1 class = "logo">Norette Ingabire</h1>
+</header>
 </html>
