--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+  body {
+    background-image: url("webimage.png");
+    background-color: #cccccc;
+  }
+  </style>
   <meta charset="utf-8">
   <title>Norette Ingabire</title>
   <link rel="stylesheet" href="assets/stylesheets/main.css">
