--- a/index.html
+++ b/index.html
@@ -14,5 +14,14 @@
 
 <header class="primary-header">
   <h1 class = "logo">Norette Ingabire</h1>
+
+  <nav class="nav primary-nav">
+    <ul>
+      <li><a href=""> About </a></li>
+      <li><a href=""> Projects </a></li>
+      <li><a href=""> Contact </a></li>
+    </ul>
+  </nav>
+
 </header>
 </html>
