--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <style>
   body {
-    background-image: url("img.webp");
+    background-image: url("webimage.png");
     background-color: #cccccc;
   }
   </style>
