--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <style>
   body {
     background-image: url("webimage.png");
+    background-size: cover;
     background-color: #cccccc;
   }
   </style>
