body and footer

--- a/index.html
+++ b/index.html
@@ -25,4 +25,14 @@
   </nav>
 
 </header>
+
+<section>
+  <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health
+  </p>
+</section>
+
+<footer>
+  <h>Get in touch!</h>
+</footer>
+
 </html>
