--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 </header>
 
-<section>
+<section class="lead container">
   <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health
   </p>
 </section>
