--- a/index.html
+++ b/index.html
@@ -24,9 +24,14 @@
     </ul>
   </nav>
 
+  <div class="hero row row-alt">
+    <h1>Welcome to my world!</h1>
+  </div>
+
+
 </header>
 
-<section class="lead container">
+<section class="lead container row row-alt">
   <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health
   </p>
 </section>
