--- a/index.html
+++ b/index.html
@@ -1,71 +1,82 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
   <head>
     <meta charset="utf-8">
+
     <title>Norette Ingabire</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet"
-    href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+
+    <!-- Connect to CSS file -->
+    <link href="assets/stylesheets/main.css" rel="stylesheet" type="text/css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
   </head>
-  <!--<body> -->
-  <header class="primary-header container group">
-    <h1 class="logo">
-    <strong>Norette Ingabire<strong>
-    </h1>
-  <!--  <h3 class="tagline">Developer.Dancer.Enthusiast
-  </h3> -->
 
-    <nav class="nav primary-nav">
-      <ul>
-        <li><a href="index.html">Home</a></li><!--
-        --><li><a href="about.html">About</a></li><!--
-        --><li><a href="projects.html">Projects</a></li><!--
-        --><li><a href="contact.html">Contact</a></li>
-        </
-    </nav>
-    </header>
+  <body id="page-top" class="index">
+    <nav id="primary-nav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
+      <div class="container">
+         <!-- ADD TOGGLE FUNCTIONALITIES -->
 
+         <div class="collapse navbar-collapse" id="navbar-collapse">
+           <ul class="nav navbar-nav navbar-right">
+             <li><a class="page-scroll" href="#about"> About </a></li>
+             <li><a class="page-scroll" href="#project"> Projects </a></li>
+             <li><a class="page-scroll" href="#contact"> Contact </a></li>
+
+           </ul>
+         </div>
+       </div>
+     </nav>
 
 
-<section class="row">
-  <div class="grid">
-
-    <!-- Introduction -->
-
-      <section class="row-alt">
-        <div class="container">
-        <section class = "teaser col-2-3">
-          <h2>About Me</h2>
-          <p>My name is Norette Ingabire and I am from Burundi. I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health</p>
+     <header>
+       <div class="header-content">
+       <div class="header-content-inner">
+         <h1 class="text-center" style="color: white">
+           Welcome to my world!
+         </h1>
+         <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life...</span></p>
+            <br>
+          </div>
         </div>
-      </section>
-      </section><!--
+      </header>
 
-        Projects
+       <section class="about-section" id="about">
+         <div class="container">
+           <div class="row">
+             <div class="col-lg-4 col-lg-offset-4">
+               <img src="webimage.png">
+             </div>
+           </div>
 
-      --> <section class="row-alt">
-         <div class=" lead container">
-      <section class="teaser col-1-3">
-        <h1>Projects</h1>
-        <p>Take a look at some of my projects below!</p>
-        <a href="https://sites.dartmouth.edu/soyeya/">Soyeya</a>
-      </div>
-    </section>
-      </section>
-  </div>
-</section>
+           <div class="col-lg-8 col-lg-offset-2 text-center">
+             <h2 class="section-heading text-center">About me!</h2>
+             <hr class="light">
+             <p class="text-faded">My name is Norette Ingabire and I am from Burundi.</br> I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health.</br>
+             </p>
 
-  <footer class="primary-footer container group">
-    <a href="mailto:noretteingabire@gmail.com">Contact Me</a>
-    <!-- <small>&copy; Norette Ingabire</small> -->
-    <nav class="nav">
-    </nav>
-  </footer>
+           </div>
+         </div>
+       </section>
 
-<!--    <h1><strong>Welcome to my world</strong></h1>
-    <p>Just laughing my way through life...</p>
-    <p><em>Take a look at my projects</em></p>
-    <h2>Lost in discovery</h2> -->
+       <!-- Projects -->
+       <section class="project-section" id="project">
+         <h1 class="text-center">Projects</h1>
+         <p class="text-faded">Check out my projects on Github</p>
+         <!-- INSERT GITHUB LINK -->
+       </section>
 
-<!--  </body>-->
-</html>
+       <!-- contact-->
+       <section class="contact-section" id="contact">
+         <h3 class="text-center">Get in touch!</h3>
+       </br>
+       <!-- INSERT SM LINKS -->
+     </section>
+
+
+  </html>
