--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body id="page-top" class="index">
-    <nav id="primary-nav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
       <div class="container">
          <!-- ADD TOGGLE FUNCTIONALITIES -->
 
