--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
     <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
       <div class="container">
          <!-- ADD TOGGLE FUNCTIONALITIES -->
+         <div class="navbar-header page-scroll">
+           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+             <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+           </button>
+           <a class="navbar-brand page-scroll" href="#page-top">Norette Ingabier</a>
+         </div>
 
          <div class="collapse navbar-collapse" id="navbar-collapse">
            <ul class="nav navbar-nav navbar-right">
@@ -50,7 +56,7 @@
          <div class="container">
            <div class="row">
              <div class="col-lg-4 col-lg-offset-4">
-               <img src="webimage.png">
+               <img src="webimage.png" alt="Norette Ingabire picture" class="=img-responsive img-circle">
              </div>
            </div>
 
@@ -75,8 +81,26 @@
        <section class="contact-section" id="contact">
          <h3 class="text-center">Get in touch!</h3>
        </br>
-       <!-- INSERT SM LINKS -->
+       <div class="container">
+         <div class="row">
+           <div class="col-sm-offset-1 col-sm-1 text-center">
+           <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
+             <i class="fa fa-facebook fa-4x"></i></a>
+           </div>
+
+           <div class="col-sm-offset-1 col-sm-1 text-center">
+             <a target="_blank" href="https://www.linkedin.com/in/noretteingabire/">
+               <i class="fa fa-linkedin fa-4x"></i></a>
+             </div>
+
+            <div class="col-sm-offset-1 col-sm-1 text-center">
+              <a target="_blank" href="https://github.com/ningabire">
+                <i class="fa fa-github fa-4x"></i></a>
+           </div>
+         </div>
+       </div>
      </section>
 
-
+       <!-- INSERT SM LINKS -->
+</body>
   </html>
