--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
              <h2 class="section-heading text-center">About me!</h2>
              <hr class="light">
              <p class="text-faded">My name is Norette Ingabire and I am from Burundi.</br> I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health.</br>
+             </br>I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br>
+             In my free time, I enjoy dancing and reading(fiction is my fave)!
+           </br> I am interested in joining Dali because it is a space that brings together many talented students and allows them to enhance their skillset while working on impactful projects.
              </p>
 
            </div>
@@ -101,7 +104,6 @@
        </div>
      </section>
 
-       <!-- INSERT SM LINKS -->
        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.0.0/jquery.min.js"></script> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <!-- Plugin JavaScript -->
