--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
              <h2 class="section-heading text-center">About me!</h2>
              <hr class="light">
              <p class="text-faded">My name is Norette Ingabire and I am from Burundi.</br> I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health.</br>
-             </br>I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br>
-             In my free time, I enjoy dancing and reading(fiction is my fave)!
+             I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br></br>
+             In my free time, I enjoy dancing and reading(fiction is my favorite)!
            </br> I am interested in joining Dali because it is a space that brings together many talented students and allows them to enhance their skillset while working on impactful projects.
              </p>
 
