--- a/index.html
+++ b/index.html
@@ -21,12 +21,15 @@
     <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
       <div class="container">
          <!-- ADD TOGGLE FUNCTIONALITIES -->
+         <!--
          <div class="navbar-header page-scroll">
            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
              <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
            </button>
            <a class="navbar-brand page-scroll" href="#page-top">Norette Ingabire</a>
          </div>
+
+       -->
 
          <div class="collapse navbar-collapse" id="navbar-collapse">
            <ul class="nav navbar-nav navbar-right">
@@ -64,7 +67,7 @@
              <h2 class="section-heading text-center">About me!</h2>
              <hr class="light">
              <p class="text-faded">My name is Norette Ingabire and I am from Burundi.</br> I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health.</br>
-             I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br></br>
+             I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br>
              In my free time, I enjoy dancing and reading(fiction is my favorite)!
            </br> I am interested in joining Dali because it is a space that brings together many talented students and allows them to enhance their skillset while working on impactful projects.
              </p>
