--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
          <div class="container">
            <div class="row">
              <div class="col-lg-4 col-lg-offset-4">
-               <img src="webimage.png" alt="Norette Ingabire picture" class="=img-responsive img-circle">
+               <img src="webimage.jpg" alt="Norette Ingabire picture" class="=img-responsive img-circle">
              </div>
            </div>
 
