--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
          <h1 class="text-center" style="color: white">
            Welcome to my world!
          </h1>
-         <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life...</span></p>
-            <br>
+         <p><!--</br></br></br><br><span style="font-size: 20px;">-->Just laughing my way through life...<!--</span>--></p>
+        <!--    <br>-->
           </div>
         </div>
       </header>
@@ -59,7 +59,7 @@
          <div class="container">
            <div class="row">
              <div class="col-lg-4 col-lg-offset-4">
-               <img src="webimage.jpg" alt="Norette Ingabire picture" class="=img-responsive img-circle">
+               <img src="webimage.jpg" class="=img-responsive img-circle">
              </div>
            </div>
 
