--- a/index.html
+++ b/index.html
@@ -78,9 +78,15 @@
 
        <!-- Projects -->
        <section class="project-section" id="project">
-         <h1 class="text-center">Projects</h1>
-         <p class="text-faded">Check out my projects on Github</p>
-         <!-- INSERT GITHUB LINK -->
+         <div class="container">
+           <div class="row">
+             <h1 class="text-center">Projects</h1>
+              <p class="text-faded">Check out my projects on Github</p>
+          <!--
+            INCLUDE BUTTON LINKING TO GITHUB Projects
+              <a href="https://github.com/ningabire"> -->
+            </div>
+          </div>
        </section>
 
        <!-- contact-->
