--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
            <div class="row">
              <h1 class="text-center">Projects</h1>
               <p class="text-faded">Check out my projects on Github</p>
+              <form action="https://github.com/ningabire">
+                <input type="submit" value="Github" />
+                </form>
           <!--
             INCLUDE BUTTON LINKING TO GITHUB Projects
               <a href="https://github.com/ningabire"> -->
