--- a/index.html
+++ b/index.html
@@ -20,16 +20,7 @@
   <body id="page-top" class="index">
     <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
       <div class="container">
-         <!-- ADD TOGGLE FUNCTIONALITIES -->
-         <!--
-         <div class="navbar-header page-scroll">
-           <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-             <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-           </button>
-           <a class="navbar-brand page-scroll" href="#page-top">Norette Ingabire</a>
-         </div>
 
-       -->
 
          <div class="collapse navbar-collapse" id="navbar-collapse">
            <ul class="nav navbar-nav navbar-right">
@@ -94,7 +85,7 @@
 
        <!-- contact-->
        <section class="contact-section" id="contact">
-         <h3 class="text-center">Get in touch!</h3>
+         <h3 class="text-center">Contact me</h3>
        </br>
        <div class="container">
          <div class="row">
