--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
        <!-- Projects -->
        <section class="project-section" id="project">
-         <div class="container">
+      <!--   <div class="container"> -->
            <div class="row">
              <h1 class="text-center">Projects</h1>
               <p class="text-faded">Check out my projects on Github</p>
@@ -80,7 +80,7 @@
             INCLUDE BUTTON LINKING TO GITHUB Projects
               <a href="https://github.com/ningabire"> -->
             </div>
-          </div>
+        <!--  </div> -->
        </section>
 
        <!-- contact-->
@@ -90,7 +90,7 @@
        <div class="container">
          <div class="row">
            <div class="col-sm-offset-1 col-sm-1 text-center">
-           <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
+           <a target="Facebook" href="https://www.facebook.com/profile.php?id=100005377066008">
              <i class="fa fa-facebook fa-4x"></i></a>
            </div>
 
