--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 
        <!-- Projects -->
        <section class="project-section" id="project">
-      <!--   <div class="container"> -->
-           <div class="row">
+         <div class="container">
+        <!--   <div class="row"> -->
              <h1 class="text-center">Projects</h1>
               <p class="text-faded">Check out my projects on Github</p>
               <form action="https://github.com/ningabire">
@@ -79,8 +79,8 @@
           <!--
             INCLUDE BUTTON LINKING TO GITHUB Projects
               <a href="https://github.com/ningabire"> -->
-            </div>
-        <!--  </div> -->
+          <!--  </div> -->
+          </div>
        </section>
 
        <!-- contact-->
