--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
   </head>
 
   <body id="page-top" class="index">
-    <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
+
+  <!--  <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
       <div class="container">
 
 
@@ -31,7 +32,7 @@
            </ul>
          </div>
        </div>
-     </nav>
+     </nav> -->
 
 
      <header>
