--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
        <section class="about-section" id="about">
          <div class="container">
           <!-- <div class="row"> -->
-             <div class="col-lg-4 col-lg-offset-4">
-               <img src="webimage.jpg" class="img-responsive rounded-circle">
+             <div class="col-lg-4 col-lg-offset-4 square">
+               <img src="webimage.jpg" class=" img-responsive rounded-circle">
              </div>
         <!--   </div> -->
 
