--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
          <div class="container">
           <!-- <div class="row"> -->
              <div class="col-lg-4 col-lg-offset-4">
-               <img src="webimage.jpg" class=" img-responsive rounded-circle">
+               <div style="width:200px; height: 200px;overflow: hidden;">
+               <img src="webimage.jpg" width="200px" height="auto">
+             </div>
              </div>
         <!--   </div> -->
 
