--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 
      <header>
+       <h1 class = "logo">Norette Ingabire</h1>
        <div class="header-content">
        <div class="header-content-inner">
          <h1 class="text-center" style="color: white">
@@ -49,13 +50,11 @@
 
        <section class="about-section" id="about">
          <div class="container">
-          <!-- <div class="row"> -->
              <div class="col-lg-4 col-lg-offset-4">
                <div style="width:200px; height: 200px;overflow: hidden;">
                <img src="webimage.jpg" width="200px" height="auto">
              </div>
              </div>
-        <!--   </div> -->
 
            <div class="col-lg-8 col-lg-offset-2 text-center">
              <h2 class="section-heading text-center">About me!</h2>
