--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
        <h1 class = "logo">Norette Ingabire</h1>
        <div class="header-content">
        <div class="header-content-inner">
-         <h1 class="text-center" style="color: white">
+         <h1 class="text-center" style="color: black">
            Welcome to my world!
          </h1>
          <p><!--</br></br></br><br><span style="font-size: 20px;">-->Just laughing my way through life...<!--</span>--></p>
