--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
 
      <header>
        <h1 class = "logo">Norette Ingabire</h1>
+
+       <nav class="nav primary-nav">
+         <ul>
+           <li><a href=""> About </a></li>
+           <li><a href=""> Projects </a></li>
+           <li><a href=""> Contact </a></li>
+         </ul>
+       </nav>
+       
        <div class="header-content">
        <div class="header-content-inner">
          <h1 class="text-center" style="color: black">
