--- a/index.html
+++ b/index.html
@@ -18,39 +18,22 @@
   </head>
 
   <body id="page-top" class="index">
-
-  <!--  <nav id="mainNav" class="navbar navbar-inverse navbar-custom navbar-fixed-top">
-      <div class="container">
-
-
-         <div class="collapse navbar-collapse" id="navbar-collapse">
-           <ul class="nav navbar-nav navbar-right">
-             <li><a class="page-scroll" href="#about"> About </a></li>
-             <li><a class="page-scroll" href="#project"> Projects </a></li>
-             <li><a class="page-scroll" href="#contact"> Contact </a></li>
-
-           </ul>
-         </div>
-       </div>
-     </nav> -->
-
-
-     <header>
-       <h1 class = "logo">Norette Ingabire</h1>
+   <header>
+     <h1 class = "logo">Norette Ingabire</h1>
 
        <nav class="nav primary-nav">
          <ul>
            <li><a href="#about"> About </a></li>
            <li><a href="#project"> Projects </a></li>
-           <li><a href="#Contact"> Contact </a></li>
+           <li><a href="#contact"> Contact </a></li>
          </ul>
        </nav>
 
        <div class="header-content">
        <div class="header-content-inner">
-         <h1 class="text-center" style="color: black">
+         <h3 class="text-center" style="color: black">
            Welcome to my world!
-         </h1>
+         </h3>
          <p><!--</br></br></br><br><span style="font-size: 20px;">-->Just laughing my way through life...<!--</span>--></p>
         <!--    <br>-->
           </div>
