--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body id="page-top" class="index">
-   <header>
+   <header class="header-site">
      <h1 class = "logo">Norette Ingabire</h1>
 
        <nav class="nav primary-nav">
