--- a/index.html
+++ b/index.html
@@ -29,14 +29,20 @@
          </ul>
        </nav>
 
-       <div class="header-content">
+
+      <!-- <div class="header-content">
        <div class="header-content-inner">
-         <h3 class="text-center" style="color: black">
+         <h2 class="text-center" style="color: black">
            Welcome to my world!
-         </h3>
+         </h2> -->
          <p><!--</br></br></br><br><span style="font-size: 20px;">-->Just laughing my way through life...<!--</span>--></p>
         <!--    <br>-->
-          </div>
+
+          <!--</div>
+        </div> -->
+
+        <div class="hero row row-alt">
+          <h1>Welcome to my world!</h1>
         </div>
       </header>
 
