--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body id="page-top" class="index">
    <header class="header-site">
-     <h1 class = "logo">Norette Ingabire</h1>
+     <h2 class = "logo">Norette Ingabire</h2>
 
        <nav class="nav primary-nav">
          <ul>
@@ -41,7 +41,7 @@
           <!--</div>
         </div> -->
 
-        <div class="hero row row-alt">
+        <div class="text-center hero row row-alt">
           <h1>Welcome to my world!</h1>
         </div>
       </header>
