--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 
         <div class="text-center hero row row-alt">
           <h1>Welcome to my world!</h1>
+          <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
         </div>
       </header>
 
