--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body id="page-top" class="index">
-   <header class="header-site">
+   <header class="header-site headerimage">
      <h2 class = "logo">Norette Ingabire</h2>
 
        <nav class="nav primary-nav">
