--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
         </div>
       </header>
 
+      <section>
+        <img src="webimage.jpg" width="auto" height="auto">
+      </section>
+
        <section class="about-section" id="about">
          <div class="container">
              <div class="col-lg-4 col-lg-offset-4">
