--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
 
   <body id="page-top" class="index">
-   <header class="headerimage">
+<!--   <header class="headerimage"> -->
      <h2 class = "logo">Norette Ingabire</h2>
 
        <nav class="nav primary-nav">
@@ -29,14 +29,12 @@
          </ul>
        </nav>
 
+      <section>
         <div class="text-center hero row row-alt">
           <h1>Welcome to my world!</h1>
           <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
         </div>
-      </header>
-
-      <section>
-        <img src="webimage.jpg" width="auto" height="auto">
+        <img src="dance.jpg" width="auto" height="auto">
       </section>
 
        <section class="about-section" id="about">
