--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1>Welcome to my world!</h1>
           <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
         </div>
-        <img src="dance.jpg" width="auto" height="auto">
+        <img src="dance.jpg" width="absolute" height="absolute">
       </section>
 
        <section class="about-section" id="about">
