--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
        </nav>
 
       <section>
+        <!--
         <div class="text-center hero row row-alt">
           <h1>Welcome to my world!</h1>
           <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
-        </div>
+        </div> -->
         <img src="dance.jpg" width="absolute" height="absolute">
       </section>
 
