--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
           <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
         </div> -->
         <img src="dance.jpg" width="absolute" height="absolute">
+        background-repeat: no repeat;
+        background-position: center;
       </section>
 
        <section class="about-section" id="about">
