--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
          </ul>
        </nav>
 
-      <section>
+      <section class="backgroundpic">
         <!--
         <div class="text-center hero row row-alt">
           <h1>Welcome to my world!</h1>
           <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
         </div> -->
-        <img src="dance.jpg" width="absolute" height="absolute">
-        background-repeat: no repeat;
-        background-position: center;
+
       </section>
 
        <section class="about-section" id="about">
