--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
        </nav>
 
       <section class="backgroundpic">
-        
+
         <div class="text-center hero row row-alt">
-          <h1>Welcome to my world!</h1>
-          <p></br></br></br><br><span style="font-size: 20px;">Just laughing my way through life</span>...</p>
+          <h1>                                           Welcome to my world!</h1>
+          <p><span style="font-size: 20px;">                                                                Just laughing my way through life</span>...</p>
         </div>
 
       </section>
