--- a/index.html
+++ b/index.html
@@ -31,10 +31,8 @@
 
       <section class="backgroundpic">
 
-        <div class="text-center hero row row-alt">
-          <h1>                                           Welcome to my world!</h1>
-          <p><span style="font-size: 20px;">                                                                Just laughing my way through life</span>...</p>
-        </div>
+          <h1 style="color:#33c3ff;"> Welcome to my world!</h1>
+          <p><span style="color:#FF9633;font-size: 20px;"><i>Just laughing my way through life...</i></span></p>
 
       </section>
 
