--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
        </nav>
 
       <section class="backgroundpic">
-
+          <center>
           <h1 style="color:#33c3ff;"> Welcome to my world!</h1>
           <p><span style="color:#FF9633;font-size: 20px;"><i>Just laughing my way through life...</i></span></p>
-
+        </center>
       </section>
 
        <section class="about-section" id="about">
