--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
 <!--   <header class="headerimage"> -->
      <h2 class = "logo">Norette Ingabire</h2>
 
+     <div class="navbar-header page-scroll">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
+                </button>
+                <a class="navbar-brand page-scroll" href="#page-top">Norette Ingabire</a>
+      </div>
+
        <nav class="nav primary-nav">
          <ul>
            <li><a href="#about"> About </a></li>
