--- a/index.html
+++ b/index.html
@@ -17,16 +17,13 @@
 
   </head>
 
+  <textarea rows="20" cols="50">
+  Norette Ingabire
+</textarea>
+
   <body id="page-top" class="index">
 <!--   <header class="headerimage"> -->
      <h2 class = "logo">Norette Ingabire</h2>
-
-     <div class="navbar-header page-scroll">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
-                </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Norette Ingabire</a>
-      </div>
 
        <nav class="nav primary-nav">
          <ul>
