--- a/index.html
+++ b/index.html
@@ -14,12 +14,8 @@
    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-
+   <p>Norete Ingabire</p>
   </head>
-
-  <textarea rows="20" cols="50">
-  Norette Ingabire
-</textarea>
 
   <body id="page-top" class="index">
 <!--   <header class="headerimage"> -->
