--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-   <p>Norete Ingabire</p>
+   <h1 style="color:#33c3ff;"></i>Norete Ingabire</i></h1>
   </head>
 
   <body id="page-top" class="index">
 <!--   <header class="headerimage"> -->
-     <h2 class = "logo">Norette Ingabire</h2>
+  <!--   <h2 class = "logo">Norette Ingabire</h2>-->
 
        <nav class="nav primary-nav">
          <ul>
