--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
-   <h1 style="color:#33c3ff;"></i>Norete Ingabire</i></h1>
+   <h1 style="color:#33c3ff;"><i>Norette Ingabire</i></h1>
   </head>
 
   <body id="page-top" class="index">
