--- a/index.html
+++ b/index.html
@@ -94,9 +94,12 @@
          </div>
        </div>
      </section>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
+
+<footer class="primary-footer">
+  <h>Facebook</h>
+</footer>
   </html>
