--- a/index.html
+++ b/index.html
@@ -65,21 +65,18 @@
               <form action="https://github.com/ningabire">
                 <input type="submit" value="Github" />
                 </form>
-          <!--
-            INCLUDE BUTTON LINKING TO GITHUB Projects
-              <a href="https://github.com/ningabire"> -->
+
           </div>
        </section>
 
        <!-- contact-->
        <section class="contact-section" id="contact">
+         <div class="container"
          <h3 class="text-center">Contact me</h3>
        </br>
-       <div class="container">
-         <div class="row">
            <div class="col-sm-offset-1 col-sm-1 text-center">
-           <a target="Facebook" href="https://www.facebook.com/profile.php?id=100005377066008">
-             <i class="fa fa-facebook fa-4x"></i></a>
+           <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
+             <i>facebook</i></a>
            </div>
 
            <div class="col-sm-offset-1 col-sm-1 text-center">
@@ -91,15 +88,8 @@
               <a target="_blank" href="https://github.com/ningabire">
                 <i class="fa fa-github fa-4x"></i></a>
            </div>
-         </div>
        </div>
      </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/scripts.js"></script>
 </body>
 
-<footer class="primary-footer">
-  <h>Facebook</h>
-</footer>
   </html>
