--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
 
     <!-- Connect to CSS file -->
     <link href="assets/stylesheets/main.css" rel="stylesheet" type="text/css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Fonts -->
    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
    <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
    <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
+
+   <!-- Add icon library -->
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+ <!-- Add font awesome icons -->
+ <a href="#" class="fa fa-facebook"></a>
+ <a href="#" class="fa fa-twitter"></a>
+
    <h1 style="color:#33c3ff;"><i>Norette Ingabire</i></h1>
   </head>
+
+
 
   <body id="page-top" class="index">
 <!--   <header class="headerimage"> -->
