--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
        </br>
            <div class="col-sm-offset-1 col-sm-1 text-center">
            <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
-             <i>facebook</i></a>
+             <i class="fa fa-linkedin fa-4x"></i></a>
            </div>
 
            <div class="col-sm-offset-1 col-sm-1 text-center">
