--- a/index.html
+++ b/index.html
@@ -18,6 +18,29 @@
 
    <!-- Add icon library -->
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <style>
+ .fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+ .fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+.fa-linkedin {
+  background: #007bb5;
+  color: white;
+}
+.fa-Github{
+  background:#030205;
+  color:white;
+}
+</style>
+
 
  <!-- Add font awesome icons -->
  <a href="#" class="fa fa-facebook"></a>
@@ -87,7 +110,7 @@
        </br>
            <div class="col-sm-offset-1 col-sm-1 text-center">
            <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
-             <i class="fa fa-linkedin fa-4x"></i></a>
+             <i class="fa fa-facebook fa-4x"></i></a>
            </div>
 
            <div class="col-sm-offset-1 col-sm-1 text-center">
