--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   background: #007bb5;
   color: white;
 }
-.fa-Github{
+.fa-github{
   background:#030205;
   color:white;
 }
@@ -106,7 +106,7 @@
        <!-- contact-->
        <section class="contact-section" id="contact">
          <div class="container"
-         <h3 class="text-center">Contact me</h3>
+         <h1 class="text-center">Contact me</h1>
        </br>
            <div class="col-sm-offset-1 col-sm-1 text-center">
            <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
