--- a/index.html
+++ b/index.html
@@ -41,11 +41,6 @@
 }
 </style>
 
-
- <!-- Add font awesome icons -->
- <a href="#" class="fa fa-facebook"></a>
- <a href="#" class="fa fa-twitter"></a>
-
    <h1 style="color:#33c3ff;"><i>Norette Ingabire</i></h1>
   </head>
 
@@ -82,9 +77,10 @@
              <h2 class="section-heading text-center">About me!</h2>
              <hr class="light">
              <p class="text-faded">My name is Norette Ingabire and I am from Burundi.</br> I am currently a third year student at Dartmouth College, majoring in Computer Science with a minor in Global Health.</br>
-             I am passionate about technology and the ways it can be applied to solve daily problems. I am also interested in working at the intersection of the healthcare and technology.</br>
+             I am passionate about technology and the ways it can be applied in solving daily problems. I am interested in working at the intersection of the healthcare and technology.</br>
+             Over the summer, I got to work on mobile application development and really enjoyed it. While it was fun to play around with the UI design/colors, it was amazing to realize how different choices bring a unique ambience to the application.
+             I am enthusiastic about joining DALI because it is a space that brings together many talented students and allows them to enhance their skillset while working on impactful projects.</br>
              In my free time, I enjoy dancing and reading(fiction is my favorite)!
-           </br> I am interested in joining Dali because it is a space that brings together many talented students and allows them to enhance their skillset while working on impactful projects.
              </p>
 
            </div>
@@ -106,7 +102,7 @@
        <!-- contact-->
        <section class="contact-section" id="contact">
          <div class="container"
-         <h1 class="text-center">Contact me</h1>
+         <h1> class="text-center">Contact me</h1>
        </br>
            <div class="col-sm-offset-1 col-sm-1 text-center">
            <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
