--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
        <!-- contact-->
        <section class="contact-section" id="contact">
          <div class="container"
-         <h1> class="text-center">Contact me</h1>
+         <h1 class="text-center">Contact me</h1>
        </br>
            <div class="col-sm-offset-1 col-sm-1 text-center">
            <a target="_blank" href="https://www.facebook.com/profile.php?id=100005377066008">
