--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>noretteingabire.me</title>
+    <title>Norette Ingabire</title>
   </head>
   <body>
-    A webpage!
+    Welcome to my webpage!
   </body>
 </html>
