added nav and menu

--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
   <head>
     <meta charset="utf-8">
     <title>Norette Ingabire</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel = "stylesheet" type = "text/css" href = "style.css">
   </head>
+
   <body>
-    Welcome to my webpage!
+    <div class = "nav">
+      <div class="menu">
+        <a href = "#">About</a>
+        <a href = "#">Projects></a>
+        <a href="#">Contact</a>
+      </div>
+    </div>
   </body>
 </html>
