added nav and menu

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    Welcome to my webpage!
     <div class = "nav">
       <div class="menu">
         <a href = "#">About</a>
